objects/ssot__AuthorizationApplication__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdditionalLocationDescription__c</fullName>
        <label>Additional Location Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessTypeId__c</fullName>
        <label>Business Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Authorization Application Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryAuthorityId__c</fullName>
        <label>Regulatory Authority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SiteAddressId__c</fullName>
        <label>Site Address</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818455526_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationApplication_SiteAddress_rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>AuthorizationApplication_SiteAddress_rel</relationshipLabel>
        <relationshipName>rel_1719818455526_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818622940_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationApplication_Application_rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>AuthorizationApplication_Application_rel</relationshipLabel>
        <relationshipName>rel_1719818622940_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819472151_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationApplication_BusinessTyp_rel</label>
        <referenceTo>ssot__BusinessType__dlm</referenceTo>
        <relationshipLabel>AuthorizationApplication_BusinessTyp_rel</relationshipLabel>
        <relationshipName>rel_1719819472151_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>